# pyrv

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pytest.yml  python-app.yml
examples/: hello_world.c
pyrv/: adapters.py  core.py  harts.py  helpers.py  instructions.py  models.py
scripts/: bootstrap_riscv_toolchain.sh
sdk/: riscv-soc.ld  rv32i.ld  sim_control.h
tests/: add.s  conftest.py  controlflow.s  helpers.py  mem.s  test_decode.py  test_hart_basic.py  test_instructions.py  test_memory.py  test_memory_mapped_peripheral.py  test_peripheral.py  test_registers.py
tests/testcases/: decode.py  decode.s  itype.py  load.S  rtype.py  simexit.S
