[project]
name = "pyrv"
version = "0.1.0"
description = "RV32I instruction set simulator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["numpy>=2.2.2", "pyelftools>=0.31", "pytest>=8.3.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
pyrv = "pyrv.core:main"

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  #"ANN",
]

[dependency-groups]
dev = []
